--- a/MapVisualization/index.html
+++ b/MapVisualization/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="public/icon.svg" />
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
 
     <link rel="stylesheet" href="node_modules/leaflet/dist/leaflet.css">
     <link rel="stylesheet" href="node_modules/leaflet.markercluster/dist/MarkerCluster.css">
@@ -15,6 +15,13 @@
   </head>
   <body>
     <div id="app">
+      <nav>
+        <h1>SBB APP</h1>
+        <label class="switch">
+          <input type="checkbox">
+          <span class="slider"></span>
+        </label>
+      </nav>
       <div id="mapid"></div>
     </div>
 
