Added Spider and SelectionView

--- a/MapVisualization/index.html
+++ b/MapVisualization/index.html
@@ -20,7 +20,11 @@
       </nav>
 
       <div class="horizontal">
-        <div class="left container">left</div>
+        <div class="left container">
+          left<br>
+          <div id="selectionView">No Point selected<br>
+          </div>
+        </div>
         <div class="map">
           <div id="mapid"></div>
         </div>
