--- a/MapVisualization/index.html
+++ b/MapVisualization/index.html
@@ -35,7 +35,9 @@
             <option value="1">Good</option>
             <option value="0">Bad</option>
             <option value="9">Unavailable</option>
-          </select>
+          </select><br>
+          OpenRailMap
+          <input type="checkbox" id="showOpenRailMap" name="showOpenRailMap"><br>
           <svg class="chart" width="100" height="400"></svg> 
         </div>
         <div class="map">
