--- a/MapVisualization/index.html
+++ b/MapVisualization/index.html
@@ -8,19 +8,42 @@
     <link rel="stylesheet" href="node_modules/leaflet/dist/leaflet.css">
     <link rel="stylesheet" href="node_modules/leaflet.markercluster/dist/MarkerCluster.css">
     <link rel="stylesheet" href="node_modules/leaflet.markercluster/dist/MarkerCluster.Default.css">
+    <link rel="stylesheet" href="theme.css">
     <link rel="stylesheet" href="style.css">
+    
 
 
     <title>MapVisualization App</title>
   </head>
-  <body>
+  <body">
     <div id="app">
-      <nav>
-        <h1>SBB APP</h1>
-      </nav>
+      <div class="toggles">
+        <div class="container-fluid fixed-top bg-secondary check-contrast">
+            <div class="row">
+                <div class="col-xl-9 col-lg-11 container-alt mx-auto">
+                    <nav class="navbar navbar-expand-xl toggles-ignore px-0 py-1 text-dark navbar-light" id="topnav">
+                        <a class="navbar-brand me-2 mb-1" href="./" title="Map"><span><b>Visialization</b></span>.app</a>
+                        <div class="navbar-nav d-none d-xl-block">
+                            <a class="nav-link pl-0 me-1" href="#" target="ext" rel="nofollow">
+                                for Pipapo
+                            </a>
+                        </div>
+                        <div class="collapse navbar-collapse navbar-dual">
+                            <div class="navbar-nav small text-uppercase ms-auto">
+                                <a class="nav-link font-weight-bold" href="#modalAbout" data-bs-toggle="modal">
+                                About
+                                </a>
+                            </div>
+                        </div>
+                    </nav>
+                </div>
+            </div>
+            
+        </div>
+    </div>
 
-      <div class="horizontal">
-        <div class="left container">
+      <div class="conatiner horizontal mt-lg-5 p-1">
+        <div class="left p-2">
           Service: 
           <select name="Service" id="Service">
             <option value="">All</option>
@@ -29,21 +52,26 @@
           <select name="Kanton" id="Kanton">
             <option value="">All</option>
           </select><br>
+          Gemeinde: 
+          <select name="Gemeinde" id="Gemeinde">
+            <option value="">All</option>
+          </select><br>
           Status: 
           <select name="Status" id="Status">
             <option value="">All</option>
-            <option value="1">Good</option>
-            <option value="0">Bad</option>
-            <option value="9">Unavailable</option>
+            <option value="1">Erfasst</option>
+            <option value="0">Unvollständig</option>
           </select><br>
           OpenRailMap
           <input type="checkbox" id="showOpenRailMap" name="showOpenRailMap"><br>
-          <svg class="chart" width="100" height="400"></svg> 
+          <div class="container">
+            <svg class="chart" width="100%" height="100%"></svg> 
+          </div>
         </div>
         <div class="map">
           <div id="mapid"></div>
         </div>
-        <div class="right container">
+        <div class="right p-2">
           <div id="selectionView">No Point selected<br>
           </div>
         </div>
